--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "src/server.js",
   "scripts": {
+    "start": "node server.js",
     "dev": "node --watch src/server.js"
   },
   "type": "module",
